Revision history for Cache

1.02 in progress
 - updated documentation on expiration units
 - modified the quoting of the untainted path regex
 - fixed the duplicated get_keys in NullCache
 - applied patch to ensure conistent state if the filesystem fills up
 - applied patch to ensure inialization of the memory cache hash

1.01 2002-04-14-01-30
 - released version 1.01
 - switched to Digest::SHA1
 - updated copyright dates

1.0 2002-04-06-18-51
 - released version 1.0
 - localized scope of global file and directory handles (FILE and DIR)
 - applied Jonathan Swartz's patch for a much better untainting regex
 - changed _Untaint_String to throw an exception on a taint
 - further improved the fix to prevent race conditions that caused the
   tests to fail
 - exposed the get_namespaces method on Cache
 - fixed the failing Win32 tests caused by fileglobs in Makefile.PL
 - applied Yves Orton's patch in _Make_Path to fix warnings on Win32

0.99 2001-12-09-18-45
 - released version 0.99
 - major refactoring of code
 - replaced non-standard usage of SUCCESS and FAILURE with Error.pm
 - replaced non-standard usage of TRUE and FALSE with 1 and 0 
 - migrated from the term "identifier" to the more standard term "key"
   and marked the old public methods with identifier as deprecated
 - broke out the MemoryBackend, FileBackend, SharedMemoryBackend into 
   distinct and reusable classes
 - fixed a long outstanding bug in the unit tests that made working
   caches appear to fail
 - changed the meaning of object and cache size for file system based
   caches to consistently reflect the total size of the objects on disk,
   but not including the directory overhead
 - changed format of persisted data in the FileBackend
 - major rewrite of documentation

0.09 2001-09-10-12-10
 - released version 0.09
 - applied Axel Beckert patch to fix the expiration units
 - applied Ken Williams's directory creation patch to pass all tests